--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
     <h1>Welcome to My Web Page Application</h1>
     <button id="colorButton">Change Background Color</button>
+    <button class = "abc" id="colorButton"
+    type="button"
+    onclick="document.getElementById('demo').innerHTML = Date()">Submit</button>
+    <p id="demo"></p>
 
     <script src="script.js"></script>
 </body>
